; ModuleID = '/home/carl/AnghaBench/zstd/tests/extr_paramgrill.c_memoTableSet.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/extr_paramgrill.c_memoTableSet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32, i32*, i32, i32 }
%struct.TYPE_6__ = type { i64* }

@strt_ind = common dso_local global i64 0, align 8
@NUM_PARAMS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*, i64*, i32)* @memoTableSet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @memoTableSet(%struct.TYPE_7__* %0, i64* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_6__, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_7__, align 8
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  store i64* %1, i64** %8, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %11 = load i64*, i64** %10, align 8
  %12 = load i64, i64* @strt_ind, align 8
  %13 = getelementptr inbounds i64, i64* %11, i64 %12
  %14 = load i64, i64* %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i64 %14
  %16 = bitcast %struct.TYPE_7__* %7 to i8*
  %17 = bitcast %struct.TYPE_7__* %15 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %16, i8* align 8 %17, i64 24, i1 false)
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  switch i32 %19, label %47 [
    i32 130, label %20
    i32 128, label %30
    i32 129, label %46
  ]

20:                                               ; preds = %3
  %21 = load i32, i32* %6, align 4
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 2
  %23 = load i32*, i32** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 4
  %25 = load i32, i32* %24, align 4
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 3
  %27 = load i32, i32* %26, align 8
  %28 = call i64 @memoTableIndDirect(%struct.TYPE_6__* %4, i32 %25, i32 %27)
  %29 = getelementptr inbounds i32, i32* %23, i64 %28
  store i32 %21, i32* %29, align 4
  br label %47

30:                                               ; preds = %3
  %31 = load i32, i32* %6, align 4
  %32 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 2
  %33 = load i32*, i32** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %35 = load i32, i32* @NUM_PARAMS, align 4
  %36 = sext i32 %35 to i64
  %37 = mul i64 4, %36
  %38 = trunc i64 %37 to i32
  %39 = call i32 @XXH64(i64** %34, i32 %38, i32 0)
  %40 = ashr i32 %39, 3
  %41 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 1
  %42 = load i32, i32* %41, align 4
  %43 = srem i32 %40, %42
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds i32, i32* %33, i64 %44
  store i32 %31, i32* %45, align 4
  br label %47

46:                                               ; preds = %3
  br label %47

47:                                               ; preds = %3, %46, %30, %20
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @memoTableIndDirect(%struct.TYPE_6__*, i32, i32) #2

declare dso_local i32 @XXH64(i64**, i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
